k8s/postgres-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-cluster-ip-service
spec:
  type: ClusterIP
  # Find "component: postgres" that located in Deployment object
  selector:
    component: postgres
  # Almost same template of NodePort object are
  # without nodePort because we don't give access to the outside world
  ports:
    - port: 5432
      targetPort: 5432
