k8s/server-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-cluster-ip-service
spec:
  type: ClusterIP
  # Find "component: server" that located in Deployment object
  selector:
    component: server
  # Almost same template of NodePort object are
  # without nodePort because we don't give access to the outside world
  ports:
    - port: 5000
      targetPort: 5000
